# Software_Lab

./: .gitignore
C++/Week_10/: QPSK_GitHub.pptx
C++/Week_10/Assignment_1/: CMakeLists.txt  main.cpp
C++/Week_10/Lab10_1_eigenTutorial/: CMakeLists.txt  eigenV2.pptx  main.cpp
C++/Week_10/constellation/: CMakeLists.txt  channel.cpp  channel.h  cons.txt  constellation_main.cpp  eigenQPSK.cpp  evaluate.cpp  evaluate.h  myMatrix.cpp  myMatrix.h  receiver.cpp  receiver.h  sender.cpp  sender.h  signal.txt  variables.h
C++/Week_10/stdafx/: stdafx.cpp  stdafx1.cpp  stdafx1.h
C++/Week_11/: 4matrix_Inverse.pptx
C++/Week_11/Assignment_1/: CMakeLists.txt  main.cpp  main.py
C++/Week_11/Assignment_2/: CMakeLists.txt  main.cpp  main.py
C++/Week_11/Lab11_1/: main.cpp  (+1 more)
C++/Week_12/: 4matrix_Inverse.pptx  data1.txt  data2.txt  datae.txt  matrixLSM2.cpp  matrix_LSM.cpp  myMatrix.h
C++/Week_13/: complex_fft_2019.pptx
C++/Week_15/: 10ML.pptx
C++/Week_4/: 2integrate.pptx
C++/Week_5/: 1&2text_sine_integrate.pptx
C++/Week_6/: 9gradientV1.pptx  peak2.xlsx
C++/Week_8/: 4matrixV2 (1).pptx
C++/Week_8/Assignment_2/: CMakeLists.txt  main.cpp
C++/Week_9/: 3random (1).pptx  dice.cpp
Python/Chapter_2/: Numpy_1.py  Numpy_2.py  Numpy_3.py  Numpy_4.py  Numpy_5.py  Numpy_6.py  Numpy_7.py  Numpy_8.py
Python/Chapter_3/: Matplotlib_1.py  Matplotlib_2.py  Matplotlib_3.py  Matplotlib_4.py  Matplotlib_5.py  Matplotlib_6.py
Python/Chapter_4/: Pandas_1.csv  Pandas_1.py  Pandas_2.py  Pandas_3.py  Pandas_4.py
Python/Chapter_5/: DynamcSys_3.py  DynamicSys_1.py  DynamicSys_2.py
(+412 files in other folders)
